--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,8 +20,8 @@
   <link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
 
   {{ "<!--Favicon-->" | safeHTML }}
-  <link rel="shortcut icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
-  <link rel="icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
+  <link rel="shortcut icon" href="{{ `images/icon.ico` | absURL }} " type="image/x-icon">
+  <link rel="icon" href="{{ `images/icon.ico` | absURL }} " type="image/x-icon">
 
   <!-- Google Tag Manager -->
   <script>
