Fixed Spacing and Image Sizes

--- a/layouts/shortcodes/skills.html
+++ b/layouts/shortcodes/skills.html
@@ -10,7 +10,7 @@
 				<ul>
 				{{ range .Site.Params.skills.design }}
 					<li class="pl-0">
-						<img src="{{.icon}}" class="w-25 mb-2" aria-label="{{ .name }}"
+						<img src="{{.icon}}" class="w-25 mb-2 pb-1" aria-label="{{ .name }}"
 							alt="{{ .name }}" />
 						<br>
 						{{ .name }}
