--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -45,7 +45,7 @@
 {{ "<!-- Main Script -->" | safeHTML }}
 {{ $script := resources.Get "js/script.js" | minify}}
 <script src="{{ $script.Permalink }}"></script>
-{{ "<!-- google analitycs -->" | safeHTML }}
+{{ "<!-- Google Analytics -->" | safeHTML }}
 <script>
   (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
@@ -58,6 +58,6 @@
     a.src = g;
     m.parentNode.insertBefore(a, m)
   })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', '{{ .Site.Params.googleAnalitycsID }}', 'auto');
+  ga('create', '{{ .Site.Params.googleAnalyticsID }}', 'auto');
   ga('send', 'pageview');
 </script>
