--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -107,6 +107,10 @@ a.text-primary:hover {
   color: $text-color;
 }
 
+.text-black {
+  color: $black;
+}
+
 .mb-10 {
   margin-bottom: 10px !important;
 }
