--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -6,7 +6,7 @@
       <div class="col-lg-8 mx-auto text-center py-5 px-sm-3 px-md-5 shadow">
         <img src="{{ .Params.Image | relURL }}" alt="{{ .Params.author }}"
           class="img-fluid d-block mx-auto rounded mb-4 author-thumb">
-        <h4>{{ .Title | markdownify }}</h4>
+        <h1 class="h2 text-black pb-3">{{ .Title | markdownify }}</h1>
         <div class="content">
           {{ .Content }}
         </div>
