--- a/layouts/work/list.html
+++ b/layouts/work/list.html
@@ -2,7 +2,7 @@
 
 <section class="section">
   <div class="container">
-    <h2 class="text-center text-sm-left pb-5 pt-0">Work Portfolio</h2>
+    <h1 class="h2 text-black text-center text-sm-left pb-5 pt-0">Work Portfolio</h1>
     <div class="row">
       <div class="col-sm-3 col-xs-12 pb-4">
         <div class="nav nav-tab flex-row text-center text-sm-left mx-auto col-12 pr-0 pr-sm-2 justify-content-center"
