--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,8 +1,8 @@
 /*!------------------------------------------------------------------
 [MAIN STYLESHEET]
 
-PROJECT:	Project Name
-VERSION:	Version Number
+PROJECT:	Joshua Booth
+VERSION:	1.0
 -------------------------------------------------------------------*/
 
 /*------------------------------------------------------------------
