Add Current Page Indicator to Navbar

--- a/assets/scss/templates/_navigation.scss
+++ b/assets/scss/templates/_navigation.scss
@@ -23,6 +23,14 @@
   }
 }
 
+.nav-home-link {
+  @include desktop {
+    background: $primary-color !important;
+    color: $white !important;
+    border-radius: .25rem !important;
+  }
+}
+
 .navbar-light .navbar-nav .nav-link {
   color: $text-color-dark;
   &:hover{
