--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -17,6 +17,15 @@ p, .paragraph {
   font-family: $primary-font;
 }
 
+.drop-cap p:first-child:first-letter {
+  color: $black;
+  float: left;
+  line-height: 40px;
+  padding-right: 8px;
+  padding-left: 3px;
+  font-size: 300%;
+  margin-top: 10px;
+}
 
 a {
   color: $primary-color;
