feat: Portfolio UI/UX designs
Added back my UI/UX designs to my portfolio, on the work page.

Also added lazy loading to each of these images as there a lot of
them.

--- a/layouts/work/list.html
+++ b/layouts/work/list.html
@@ -84,6 +84,24 @@
                 </div>
               </div>
               {{ end }}
+            {{ else }}
+              <!-- Loop over instagram project photos -->
+              {{ range .project }}
+              <div class="col-md-4 col-12 text-md-center mx-auto mb-4">
+                <a
+                  href="https://instagram.com/p/{{ .code }}"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img
+                    class="mx-auto w-100"
+                    src="{{ .image | relURL }}"
+                    alt="{{ .name | markdownify }}"
+                    loading=lazy
+                  />
+                </a>
+              </div>
+              {{ end }}
             {{ end }}
             </div>
           </div>
