--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,7 +4,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <a class="navbar-brand" href="{{ .Site.BaseURL }}">
-        <img class="img-fluid" style="width:10em" src="{{ .Site.Params.logo | relURL }}" alt="{{ .Site.Title }}">
+        <img class="logo img-fluid" src="{{ .Site.Params.logo | relURL }}" alt="{{ .Site.Title }}">
       </a>
       <button class="navbar-toggler border-0" aria-label="Toggle Navigation" type="button" data-toggle="collapse" data-target="#navigation">
         <i class="ti-menu h3"></i>
