--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row justify-content-between align-items-center">
       <div class="col-lg-4 text-center text-lg-left mb-4 mb-lg-0">
-        <a href="{{ .Site.BaseURL }}" class="d-block"><img src="{{ .Site.Params.Logo | relURL }}" style="width:13em" class="img-fluid" alt="{{ .Site.Title }}"></a>
+        <a href="{{ .Site.BaseURL }}" class="d-block"><img src="{{ .Site.Params.Logo | relURL }}" class="logo img-fluid" alt="{{ .Site.Title }}"></a>
       </div>
       <div class="col-lg-4 text-center mb-4 mb-lg-0">
         <ul class="list-inline mb-0">
