--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,8 +1,9 @@
 <head>
   <meta charset="utf-8">
   <title>{{ .Title }}</title>
+  <meta name="theme-color" content="#ffffff">
 
-  {{ "<!-- mobile responsive meta -->" | safeHTML }}
+  {{ "<!-- Mobile responsive meta -->" | safeHTML }}
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description"
     content="{{ with .Description }}{{ . }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}">
@@ -10,18 +11,24 @@
   <meta name="author" content="{{ . }}">{{ end }}
   {{ hugo.Generator }}
 
-  {{ "<!-- plugins -->" | safeHTML }}
+  {{ "<!-- Plugins -->" | safeHTML }}
   {{ range .Site.Params.plugins.css }}
   <link rel="stylesheet" href="{{ .URL | absURL }} ">
   {{ end }}
 
-  {{ "<!-- Main Stylesheet -->" | safeHTML }}
-  {{ $styles := resources.Get "scss/style.scss" | toCSS | minify }}
+  {{ "<!-- Main stylesheet -->" | safeHTML }}
+  {{ $styles := resources.Get "scss/style.scss" | toCSS | minify | fingerprint }}
   <link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
-
-  {{ "<!--Favicon-->" | safeHTML }}
-  <link rel="shortcut icon" href="{{ `images/icon.ico` | absURL }} " type="image/x-icon">
-  <link rel="icon" href="{{ `images/icon.ico` | absURL }} " type="image/x-icon">
+  
+  {{ "<!-- Icons -->" | safeHTML }}
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ `images/icons/apple-touch-icon.png` | absURL }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ `images/icons/favicon-32x32.png` | absURL }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ `images/icons/favicon-16x16.png` | absURL }}">
+  <link rel="manifest" href="{{ `/site.webmanifest` | absURL }}">
+  <link rel="mask-icon" href="{{ `images/icons/safari-pinned-tab.svg` | absURL }}" color="#000000">
+  <link rel="shortcut icon" href="{{ `images/icons/favicon.ico` | absURL }}">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-config" content="{{ `static/browserconfig.xml` | absURL }}">
 
   <!-- Google Tag Manager -->
   <script>
