--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,5 +1,5 @@
 /*  typography */
-@import url('https://fonts.googleapis.com/css?family=Muli:300,400,600,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Muli:300,400,600,700&display=swap");
 
 body {
   line-height: 1.5;
@@ -9,7 +9,8 @@ body {
   color: $text-color;
 }
 
-p, .paragraph {
+p,
+.paragraph {
   font-weight: 400;
   color: $text-color;
   font-size: 18px;
@@ -29,43 +30,56 @@ p, .paragraph {
 
 a {
   color: $primary-color;
-  &:hover{
+
+  &:hover {
     color: $primary-color;
   }
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: $text-color-dark;
   font-family: $primary-font;
   font-weight: 600;
   line-height: 1.2;
-  a{
-    &:hover{
+
+  a {
+    &:hover {
       text-decoration: none;
     }
   }
 }
 
-h1, .h1{
+h1,
+.h1 {
   font-size: 50px;
 }
 
-h2, .h2{
+h2,
+.h2 {
   font-size: 40px;
 }
 
-h3, .h3{
+h3,
+.h3 {
   font-size: 30px;
 }
 
-h4, .h4{
+h4,
+.h4 {
   font-size: 26px;
 }
 
-h5, .h5{
+h5,
+.h5 {
   font-size: 20px;
 }
 
-h6, .h6{
+h6,
+.h6 {
   font-size: 16px;
 }
