--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,7 +1,11 @@
 {{ define "main" }}
 
 <div class="text-center section mb-3">
-  <img src="images/404_page_not_found.svg" class="mb-2 mh-50 w-75" alt="">
+  <img
+    src="images/404_page_not_found.svg"
+    class="mb-2 mh-50 w-75"
+    alt="404 Image"
+  />
   <h2>Page Not Found!</h2>
   <p class="col-10 text-center mx-auto">
     This page was not found, you can go back or search for the page.
