--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
-{{- partial "head.html" . -}}
-
-<body>
+  {{- partial "head.html" . -}}
+  <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ .Site.Params.googleTagManager }}" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript>
+      <iframe
+        src="https://www.googletagmanager.com/ns.html?id={{ .Site.Params.googleTagManager }}"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe>
+    </noscript>
     <!-- End Google Tag Manager (noscript) -->
     {{- partial "preloader.html" . -}}
     {{- partial "header.html" . -}}
@@ -13,5 +19,4 @@
     {{- end }}
     {{- partial "footer.html" . -}}
 </body>
-
 </html>
