--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,13 +6,23 @@
       <div class="col-lg-8 mx-auto block shadow mb-5">
         <h2>{{ .Title | markdownify }}</h2>
         <div class="mb-3 post-meta">
-          <a href="{{ `author/` | relLangURL }}{{ .Params.Author | urlize | lower }}">{{ .Params.Author | title | humanize }}</a>,
+          <a
+            href="{{ `author/` | relLangURL }}{{ .Params.Author | urlize | lower }}"
+          >
+            {{ .Params.Author | title | humanize }}
+          </a>,
           {{ .PublishDate.Format "02/06/2006" }}, {{ range .Params.Categories }}
-          <a href="{{ `categories/` | relLangURL }}{{ . | urlize | lower }}">{{ . | title | humanize }}</a>
+          <a href="{{ `categories/` | relLangURL }}{{ . | urlize | lower }}">
+            {{ . | title | humanize }}
+          </a>
           {{ end }}
         </div>
         {{ if .Params.Image }}
-        <img src="{{ .Params.Image | relURL }}" class="img-fluid w-100 mb-4" alt="{{ .Title | markdownify }}">
+          <img
+            src="{{ .Params.Image | relURL }}"
+            class="img-fluid w-100 mb-4"
+            alt="{{ .Title | markdownify }}"
+          />
         {{ end }}
         <div class="content mb-5">
           {{ .Content }}
