--- a/layouts/author/single.html
+++ b/layouts/author/single.html
@@ -4,11 +4,13 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 mx-auto text-center block shadow">
-        <img src="{{ .Params.Image | relURL }}" alt="" class="img-fluid d-block mx-auto rounded-circle mb-4 author-thumb">
+        <img
+          src="{{ .Params.Image | relURL }}"
+          alt=""
+          class="img-fluid d-block mx-auto rounded-circle mb-4 author-thumb"
+        />
         <h4>{{ .Title | markdownify }}</h4>
-        <div class="content">
-          {{ .Content }}
-        </div>
+        <div class="content">{{ .Content }}</div>
       </div>
     </div>
   </div>
@@ -24,7 +26,7 @@
         <div class="bg-white shadow block">
           {{ $name:= .Title }}
           {{ range where .Site.RegularPages "Params.author" $name }}
-          {{ .Render "article" }}
+            {{ .Render "article" }}
           {{ end }}
         </div>
       </div>
