--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -6,27 +6,56 @@
       <div class="col-lg-5 mb-5">
         <h1 class="h2 text-black mb-4">{{ .Title | markdownify }}</h1>
         <div class="content">{{ .Content }}</div>
-        <form method="POST" action="{{ .Site.Params.contactFormAction | safeURL}}" class="row">
+        <form
+          method="POST"
+          action="{{ .Site.Params.contactFormAction | safeURL}}"
+          class="row"
+        >
           <div class="col-md-6">
-            <input type="text" class="form-control mb-4" placeholder="Name" name="name" id="name">
+            <input
+              type="text"
+              class="form-control mb-4"
+              placeholder="Name"
+              name="name"
+              id="name"
+            />
           </div>
           <div class="col-md-6">
-            <input type="email" class="form-control mb-4" placeholder="Email" name="email" id="email">
+            <input
+              type="email"
+              class="form-control mb-4"
+              placeholder="Email"
+              name="email"
+              id="email"
+            />
           </div>
           <div class="col-12">
-            <input type="text" class="form-control mb-4" placeholder="Subject" name="subject" id="subject">
+            <input
+              type="text"
+              class="form-control mb-4"
+              placeholder="Subject"
+              name="subject"
+              id="subject"
+            />
           </div>
           <div class="col-12">
-            <textarea name="message" id="message" class="form-control mb-4" placeholder="Type Your Message Here"
-              rows="5"></textarea>
+            <textarea
+              name="message"
+              id="message"
+              class="form-control mb-4"
+              placeholder="Type Your Message Here"
+              rows="5"
+            ></textarea>
           </div>
           <div class="col-12">
-            <button class="btn btn-primary btn-block" type="submit">Send</button>
+            <button class="btn btn-primary btn-block" type="submit">
+              Send
+            </button>
           </div>
         </form>
       </div>
       <div class="col-lg-6 text-md-right">
-        <img class="img-fluid" src="{{ .Params.Image | relURL }}" alt="">
+        <img class="img-fluid" src="{{ .Params.Image | relURL }}" alt="" />
       </div>
     </div>
   </div>
