--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,25 +1,45 @@
 {{ define "main" }}
 
 <!-- banner -->
-<section class="banner bg-cover" style="background-image: url('{{ .Site.Params.banner.bgImage | relURL }}');">
-  <img src="{{ .Site.Params.banner.image | relURL }}" class="img-fluid illustration w-75 h-75" alt="">
+<section
+  class="banner bg-cover"
+  style="background-image: url('{{ .Site.Params.banner.bgImage | relURL }}');"
+>
+  <img
+    src="{{ .Site.Params.banner.image | relURL }}"
+    class="img-fluid illustration w-75 h-75"
+    alt=""
+  />
   <div class="container">
     <div class="row">
       <div class="col-lg-6 mb-5 mb-lg-0 text-center">
         <h1>{{ .Site.Params.banner.title | markdownify }}</h1>
         <h4>{{ .Site.Params.banner.subTitle | markdownify }}</h4>
-          <ul class="list-inline social-icon mb-0 pt-3">
-            {{ range .Site.Params.social }}
-            <li class="list-inline-item">
-              <a href="{{ .link | safeURL }}" aria-label="{{ .name }}" alt="{{ .name }}" target="_blank" rel="noopener noreferrer">
-                <i class="{{ .icon }}"></i>
-              </a>
-            </li>
-            {{ end }}
-          </ul>
+
+        <ul class="list-inline social-icon mb-0 pt-3">
+          {{ range .Site.Params.social }}
+          <li class="list-inline-item">
+            <a
+              href="{{ .link | safeURL }}"
+              aria-label="{{ .name }}"
+              alt="{{ .name }}"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="{{ .icon }}"></i>
+            </a>
+          </li>
+          {{ end }}
+        </ul>
       </div>
-      <div class="col-lg-6 illustration-mobile text-center mx-auto w-75 mw-75 pb-5">
-        <img src="{{ .Site.Params.banner.image | relURL }}" class="img-fluid" alt="">
+      <div
+        class="col-lg-6 illustration-mobile text-center mx-auto w-75 mw-75 pb-5"
+      >
+        <img
+          src="{{ .Site.Params.banner.image | relURL }}"
+          class="img-fluid"
+          alt="{{ .Site.Params.banner.title }}"
+        />
       </div>
     </div>
   </div>
@@ -34,13 +54,22 @@
       <div class="col-lg-8 mx-auto pt-3">
         <div class="row shadow bg-white p-5">
           <div class="col-md-4 text-center text-md-left mb-4 mb-lg-0">
-            <img src="{{ .Site.Params.cta.image | relURL }}" class="mr-4" alt="..."></div>
+            <img
+              src="{{ .Site.Params.cta.image | relURL }}"
+              class="mr-4"
+              alt="{{ .Site.Params.cta.title }}"
+            />
+          </div>
           <div class="col-md-8 text-center text-md-left">
             <h3 class="mt-0">{{ .Site.Params.cta.title | markdownify }}</h3>
             <p>{{ .Site.Params.cta.description | markdownify }}</p>
             {{ if .Site.Params.cta.button.enable }}
-            <a href="{{ .Site.Params.cta.button.link | absURL }}"
-              class="btn btn-primary">{{ .Site.Params.cta.button.label }}</a>
+              <a
+                href="{{ .Site.Params.cta.button.link | absURL }}"
+                class="btn btn-primary"
+              >
+                {{ .Site.Params.cta.button.label }}
+              </a>
             {{ end }}
           </div>
         </div>
@@ -52,4 +81,5 @@
 <!-- /cta -->
 
 {{ partial "personData.html" }}
+
 {{ end }}
