--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,12 +3,22 @@
   <div class="container">
     <div class="row justify-content-between align-items-center">
       <div class="col-lg-4 text-center text-lg-left mb-4 mb-lg-0">
-        <a href="{{ .Site.BaseURL }}" class="d-block"><img src="{{ .Site.Params.Logo | relURL }}" class="logo img-fluid" alt="{{ .Site.Title }}"></a>
+        <a href="{{ .Site.BaseURL }}" class="d-block">
+          <img
+            src="{{ .Site.Params.Logo | relURL }}"
+            class="logo img-fluid"
+            alt="{{ .Site.Title }}"
+          />
+        </a>
       </div>
       <div class="col-lg-4 text-center mb-4 mb-lg-0">
         <ul class="list-inline mb-0">
           {{ range .Site.Menus.footer }}
-          <li class="list-inline-item"><a class="text-dark d-block p-2" href="{{ .URL | absURL }}">{{ .Name }}</a></li>
+          <li class="list-inline-item">
+            <a class="text-dark d-block p-2" href="{{ .URL | absURL }}">
+              {{ .Name }}
+            </a>
+          </li>
           {{ end }}
         </ul>
       </div>
@@ -16,7 +26,13 @@
         <ul class="list-inline social-icon mb-0">
           {{ range .Site.Params.social }}
           <li class="list-inline-item">
-            <a href="{{ .link | safeURL }}" aria-label="{{ .name }}" alt="{{ .name }}" target="_blank" rel="noopener noreferrer">
+            <a
+              href="{{ .link | safeURL }}"
+              aria-label="{{ .name }}"
+              alt="{{ .name }}"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <i class="{{ .icon }}"></i>
             </a>
           </li>
@@ -40,24 +56,35 @@
 
 {{ "<!-- JS Plugins -->" | safeHTML }}
 {{ range .Site.Params.plugins.js}}
-<script src="{{ .URL | absURL }}"></script>
+  <script src="{{ .URL | absURL }}"></script>
 {{ end }}
+
 {{ "<!-- Main Script -->" | safeHTML }}
 {{ $script := resources.Get "js/script.js" | minify}}
 <script src="{{ $script.Permalink }}"></script>
+
+
 {{ "<!-- Google Analytics -->" | safeHTML }}
 <script>
   (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r;
-    i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date();
-    a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0];
+    i["GoogleAnalyticsObject"] = r;
+    (i[r] =
+      i[r] ||
+      function () {
+        (i[r].q = i[r].q || []).push(arguments);
+      }),
+      (i[r].l = 1 * new Date());
+    (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
     a.async = 1;
     a.src = g;
-    m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', '{{ .Site.Params.googleAnalyticsID }}', 'auto');
-  ga('send', 'pageview');
+    m.parentNode.insertBefore(a, m);
+  })(
+    window,
+    document,
+    "script",
+    "//www.google-analytics.com/analytics.js",
+    "ga"
+  );
+  ga("create", "{{ .Site.Params.googleAnalyticsID }}", "auto");
+  ga("send", "pageview");
 </script>
