--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,52 +1,84 @@
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>{{ .Title }}</title>
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#ffffff" />
 
-  {{ "<!-- Mobile responsive meta -->" | safeHTML }}
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="description"
-    content="{{ with .Description }}{{ . }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}">
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1"
+  />
+  <meta
+    name="description"
+    content="{{ with .Description }}{{ . }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}"
+  />
+
   {{ with .Site.Params.author }}
-  <meta name="author" content="{{ . }}">{{ end }}
+  <meta name="author" content="{{ . }}">
+  {{ end }}
+
   {{ hugo.Generator }}
 
   {{ "<!-- Plugins -->" | safeHTML }}
   {{ range .Site.Params.plugins.css }}
-  <link rel="stylesheet" href="{{ .URL | absURL }} ">
+    <link rel="stylesheet" href="{{ .URL | absURL }} ">
   {{ end }}
 
   {{ "<!-- Main stylesheet -->" | safeHTML }}
   {{ $styles := resources.Get "scss/style.scss" | toCSS | minify | fingerprint }}
   <link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
-  
+
   {{ "<!-- Icons -->" | safeHTML }}
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ `images/icons/apple-touch-icon.png` | absURL }}">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ `images/icons/favicon-32x32.png` | absURL }}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ `images/icons/favicon-16x16.png` | absURL }}">
-  <link rel="manifest" href="{{ `/site.webmanifest` | absURL }}">
-  <link rel="mask-icon" href="{{ `images/icons/safari-pinned-tab.svg` | absURL }}" color="#000000">
-  <link rel="shortcut icon" href="{{ `images/icons/favicon.ico` | absURL }}">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-config" content="{{ `static/browserconfig.xml` | absURL }}">
+  <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="{{ `images/icons/apple-touch-icon.png` | absURL }}"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="{{ `images/icons/favicon-32x32.png` | absURL }}"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="{{ `images/icons/favicon-16x16.png` | absURL }}"
+  />
+  <link rel="manifest" href="{{ `/site.webmanifest` | absURL }}" />
+  <link
+    rel="mask-icon"
+    href="{{ `images/icons/safari-pinned-tab.svg` | absURL }}"
+    color="#000000"
+  />
+  <link rel="shortcut icon" href="{{ `images/icons/favicon.ico` | absURL }}" />
+  <meta name="msapplication-TileColor" content="#ffffff" />
+  <meta
+    name="msapplication-config"
+    content="{{ `static/browserconfig.xml` | absURL }}"
+  />
 
   <!-- Google Tag Manager -->
   <script>
     (function (w, d, s, l, i) {
       w[l] = w[l] || [];
       w[l].push({
-        'gtm.start': new Date().getTime(),
-        event: 'gtm.js'
+        "gtm.start": new Date().getTime(),
+        event: "gtm.js",
       });
       var f = d.getElementsByTagName(s)[0],
         j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
+        dl = l != "dataLayer" ? "&l=" + l : "";
       j.async = true;
-      j.src =
-        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+      j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
       f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', '{{ .Site.Params.googleTagManager }}');
+    })(
+      window,
+      document,
+      "script",
+      "dataLayer",
+      "{{ .Site.Params.googleTagManager }}"
+    );
   </script>
   <!-- End Google Tag Manager -->
-
 </head>
